[gd_scene load_steps=5 format=3 uid="uid://b4613sm3js60l"]

[ext_resource type="Script" uid="uid://drest7menu2gdx" path="res://ui/rest_menu.gd" id="1_rest"]
[ext_resource type="Theme" uid="uid://c7q6510one1wh" path="res://ui/themes/Underkingdom.tres" id="2_theme"]
[ext_resource type="PackedScene" uid="uid://number_input_comp" path="res://ui/components/number_input.tscn" id="3_number_input"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.7, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="RestMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_rest")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "◆ REST ◆"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="OptionRested" type="Label" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Until fully rested"

[node name="OptionTime" type="Label" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Until dawn"

[node name="OptionHealed" type="Label" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Until fully healed"

[node name="OptionMana" type="Label" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Until mana restored"

[node name="OptionCustomContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="OptionCustomLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer/OptionCustomContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Wait "

[node name="TurnsInput" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer/OptionCustomContainer" instance=ExtResource("3_number_input")]
layout_mode = 2
min_value = 1
max_value = 10000
default_value = 10
max_digits = 5
label_text = ""

[node name="OptionCustomSuffix" type="Label" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer/OptionCustomContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = " turns"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Stamina: 50/100"
horizontal_alignment = 1

[node name="Footer" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "↑↓/TAB to navigate • ENTER to select • ESC to cancel"
horizontal_alignment = 1
